--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>D3.chart examples</title>
 		<script src="scripts/lib/d3.v3.js"></script>
+		<script src="scripts/lib/d3.chart.js"></script>
 		<script src="scripts/datasrc.js"></script>
 		<script src="scripts/bar-chart.js"></script>
 		<script src="scripts/chord-diagram.js"></script>
