--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="scripts/lib/d3.chart.js"></script>
 		<script src="scripts/datasrc.js"></script>
 		<script src="scripts/bar-chart.js"></script>
+		<script src="scripts/fading-bar-chart.js"></script>
 		<script src="scripts/chord-diagram.js"></script>
 		<link rel="stylesheet" href="styles/index.css"></link>
 	</head>
